[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["krs85 <kelly.shiptoski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[dependencies]
